# sx

./: .gitignore  LICENSE  SECURITY.md  THIRD_PARTY_NOTICES.md  build.zig  build.zig.zon  clang_shim.cpp  clang_shim.h  llvm_shim.c  readme.md  specs.md
bench/: BENCH-HTTPZ.md  go.mod  http-server.go  http-server.zig  run.sh  sx-server.sx  tls-probe.sx
bench/rust-http-server/: Cargo.toml
bench/rust-http-server/src/: main.rs
design/: bundled-zig-link-backend-design.md  comptime-compiler-api.md  context-extension.md  execution-evolution-roadmap.md  inline-asm-design.md  packages.md
docs/: compression-coverage.md  compression-miniz-disposition.md  compression.md  debugger.md  error-handling.md  http-server.md  inline-assembly.md
issues/: 0030-extern-global-declarations.md  0030-extern-global-declarations.sx  0148-absolute-entry-path-duplicates-imported-types.md  0154-sret-array-before-pointer-field.md  0155-scalar-pointer-index-llvm-panic.md  0156-comptime-pack-captured-into-closure.md  0156-comptime-pack-captured-into-closure.sx  0157-ufcs-generic-method-name-collides-stdlib-unresolved.md  0158-union-struct-literal-silently-miscompiles.md  0159-many-pointer-slice-garbage-len.md  0160-optional-chain-value-optional-and-accessors.md  0161-struct-literal-against-non-aggregate.md  0162-comptime-run-returning-optional-aggregate.md  0163-untagged-union-payload-binding-match-panics.md  0164-if-optional-no-binding-folds-true.md  0165-parenthesized-nested-optional-malformed.md  0166-null-coalesce-struct-literal-default-unresolved.md  0170-closure-optional-layout-truncated.md  (+195 more)
(+2875 files in other folders)
