[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread"] }
